# rag_chatbot

./: .env.sample  .gitignore  Dockerfile  README.md  cloudbuild.yaml  codebuild.yaml  docker-compose.yml  pyproject.toml
data/: class_data.csv  class_data_embeddings.json  class_data_full_texts.json
lib/: env.py
rag/: client.py  data_count.py  insert.py  insert_all.py  model.py  search.py  setup.py
scraping/: extract.py  koan.py
scraping/syllabus/: bungaku.csv  hougaku.csv  igaku_hoken.csv  igaku_igakuka.csv  keizaigaku.csv  kisokou.csv  kisokou_ver2.csv  kogaku.csv  kogaku_ver2.csv  ningenkagaku.csv  rigaku.csv  rigaku_ver2.csv  shigaku.csv  yakugaku.csv
scripts/: csv.py  insert_supabase.py  process_csv.py
src/: gui.py  llm.py  model.py  prompt.py  rag.py  rag_db.py  rag_searvice.py
supabase_rag/: client.py  embedding.py  insert.py  memo.sql  model.py  rag.py  search.py
