[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Ogata Katsuya <130939004+ogatakatsuya@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.33.0"
google-genai = "^1.0.0"
python-dotenv = "^1.0.1"
openai = "^1.61.1"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
