[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Ogata Katsuya <130939004+ogatakatsuya@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "src" }, 
    { include = "lib" },
    { include = "supabase_rag" }
]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.33.0"
google-genai = "^1.0.0"
openai = "^1.61.1"
pandas = "^2.2.3"
numpy = "^2.2.2"
jinja2 = "^3.1.5"
beautifulsoup4 = "^4.13.3"
selenium = "^4.29.0"
supabase = "^2.15.0"
pydantic-settings = "^2.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
